# house-tracker

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  buildClangVers.bat  buildSolution.bat  count_lines.ps1  data.xlsx  vcpkg.json
.github/workflows/: deploy.yml
src/: main.cpp
src/raw_html/: html_1.json  html_2025-04-03_22-39-29.7463293.json  html_2025-04-03_22-40-31.7541989.json  html_2025-04-05_09-19-25.5412511.json  html_2025-04-05_09-58-04.6903674.json  html_2025-04-05_10-00-32.1946405.json  html_2025-04-05_14-26-37.3302691.json  html_2025-04-05_14-26-38.4452585.json  html_2025-04-05_20-58-03.1054353.json  html_2025-04-06_00-51-01.9867392.json  html_2025-04-06_13-08-47.6015662.json  html_2025-04-06_23-37-55.4706761.json  html_2025-04-09_22-55-05.0654108.json  html_2025-04-09_22-55-09.6164530.json  html_2025-04-10_21-25-58.5735595.json  html_2025-04-10_22-32-00.7123967.json  html_2025-04-10_22-32-00.8905927.json  html_2025-04-10_22-32-01.0997327.json  html_2025-04-10_22-32-01.2734728.json  html_2025-04-10_22-32-01.4107610.json  html_2025-04-10_22-32-01.5827246.json  html_2025-04-10_22-32-01.7773157.json  html_2025-04-10_22-32-01.9442943.json  html_2025-04-10_22-32-02.1122815.json  html_2025-04-14_10-19-41.1071961.json  html_2025-04-14_10-19-41.2339045.json  html_2025-04-14_10-19-41.3858048.json  html_2025-04-14_10-19-41.6600395.json  html_2025-04-14_10-19-41.7756054.json  html_2025-04-14_10-19-41.9018350.json  html_2025-04-14_10-19-42.0137022.json  html_2025-04-14_10-19-42.1101133.json  html_2025-04-14_10-19-42.1980793.json  html_2025-04-14_10-19-44.7425171.json  html_2025-04-15_09-35-11.1755447.json  html_2025-04-15_09-35-11.2594564.json  html_2025-04-15_09-35-11.3760323.json  html_2025-04-15_09-35-11.4813124.json  html_2025-04-15_09-35-11.5670681.json  html_2025-04-15_09-35-11.6734995.json  (+4 more)
src/scraper/: betriScraper.cpp  betriScraper.hpp  filesystem.cpp  filesystem.hpp  house_model.hpp  jsonHelper.cpp  jsonHelper.hpp  parser.hpp  scraper.cpp  scraper.hpp
src/scrapers/: PropertyManager.cpp  PropertyManager.hpp  filesystem.cpp  filesystem.hpp  house_model.hpp  jsonHelper.cpp  jsonHelper.hpp  parser.cpp  parser.hpp  regexParser.cpp  scraper.cpp  scraper.hpp
src/storage/: properties.json
src/webapi/: backgroundService.cpp  backgroundService.hpp  webapi.cpp  (+1 more)
(+22 files in other folders)
